# rc-controller

./: .gitmodules  CMakeLists.txt  LICENSE  avr-toolchain.cmake  base.diagon  controller.diagon  main.c  main.c.cfg  rc-controller.sim1  reciever.diagon
circuit-design/: base.diagon  calcpad.txt  controller.diagon  reciever.diagon
include/: adc.h
lib/adc/: adc.c  prescaler.h
lib/include/adc/: adc.h
